[gd_scene load_steps=6 format=3 uid="uid://cts7km825n2ko"]

[ext_resource type="Script" path="res://src/enemies/Enemy.gd" id="1_xe70j"]
[ext_resource type="Theme" uid="uid://bm3c3n45abu72" path="res://src/ui/themes/default_theme.tres" id="2_tg7ta"]

[sub_resource type="Animation" id="Animation_l0ogo"]
resource_name = "take_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hw4sk"]
resource_name = "turn_shake"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 64), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ct5wy"]
_data = {
"take_damage": SubResource("Animation_l0ogo"),
"turn_shake": SubResource("Animation_hw4sk")
}

[node name="Enemy" type="Node2D"]
script = ExtResource("1_xe70j")

[node name="EnemyImage" type="TextureRect" parent="."]
offset_top = 64.0
offset_right = 480.0
offset_bottom = 544.0
expand_mode = 1

[node name="HealthLabel" type="Label" parent="."]
offset_right = 512.0
offset_bottom = 32.0
theme = ExtResource("2_tg7ta")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpcomingActionLabel" type="Label" parent="."]
offset_top = 32.0
offset_right = 512.0
offset_bottom = 64.0
theme = ExtResource("2_tg7ta")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ct5wy")
}
